[gd_scene load_steps=16 format=3 uid="uid://cwuj45ugxu7uc"]

[ext_resource type="Script" uid="uid://cw5wkxq6l02bt" path="res://Scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://6qlohigse765" path="res://menu.png" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://dm60xuq3y73e8" path="res://Music/main menu song.mp3" id="3_bqqt6"]
[ext_resource type="Script" uid="uid://bfmhe5bo2x65q" path="res://Scripts/audio_control.gd" id="4_wu84c"]
[ext_resource type="Script" uid="uid://dm20yli8ljv14" path="res://Scripts/full_screen_control.gd" id="5_8ln24"]
[ext_resource type="FontFile" uid="uid://bmx5k8dhbouff" path="res://bloodcrow.ttf" id="6_rtw2f"]
[ext_resource type="AudioStream" uid="uid://nj82bs5whgh3" path="res://Music/Ambience/distress-signal-107676.mp3" id="7_cp0ys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.171269, 0.259227, 0.0103816, 0.572549)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.529067, 0.529067, 0.529067, 0.121569)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.197427, 0.295581, 0.0133801, 0.572549)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.529067, 0.529067, 0.529067, 0.121569)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.474368, 0.681902, 0.056684, 0.572549)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.529067, 0.529067, 0.529067, 0.121569)
shadow_size = 5

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_bqqt6")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bqqt6"]
color = Color(0.851769, 0.851769, 0.851769, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(0, 0.629484, 0, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(0, 0.629484, 0, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Node" type="Node" parent="."]

[node name="MainButtons" type="VBoxContainer" parent="Node"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -117.0
offset_right = 227.0
offset_bottom = 117.0
grow_vertical = 2
theme_override_constants/separation = 61

[node name="Button" type="Button" parent="Node/MainButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Start"

[node name="Button2" type="Button" parent="Node/MainButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Options"

[node name="Button3" type="Button" parent="Node/MainButtons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Exit"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bqqt6")
autoplay = true
parameters/looping = true

[node name="Options" type="Panel" parent="AudioStreamPlayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = -162.0
offset_right = 311.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="AudioStreamPlayer/Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_right = 61.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Back" type="Button" parent="AudioStreamPlayer/Options/Label"]
layout_mode = 0
offset_left = -105.5
offset_top = 271.0
offset_right = 226.5
offset_bottom = 313.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
text = "Back"

[node name="AudioControl" type="HSlider" parent="AudioStreamPlayer/Options"]
layout_mode = 0
offset_left = 13.0
offset_top = 66.0
offset_right = 349.0
offset_bottom = 82.0
theme_override_styles/slider = SubResource("StyleBoxLine_bqqt6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_wu84c")
audio_bus_name = "Music"

[node name="FullScreenControl" type="CheckButton" parent="AudioStreamPlayer/Options"]
layout_mode = 0
offset_left = 20.0
offset_top = 107.0
offset_right = 332.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 37
text = "Full Screen"
script = ExtResource("5_8ln24")

[node name="Label2" type="Label" parent="AudioStreamPlayer/Options"]
layout_mode = 0
offset_left = 379.0
offset_top = 51.0
offset_right = 551.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 28
text = "Music / sounds"

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 17.0
offset_right = 777.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(0.214944, 0.360339, 0.804677, 1)
theme_override_colors/font_shadow_color = Color(0.0451921, 0.300131, 0.142813, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("6_rtw2f")
theme_override_font_sizes/font_size = 129
text = "Alien X"

[node name="Starting_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cp0ys")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.8

[connection signal="pressed" from="Node/MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Node/MainButtons/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Node/MainButtons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="AudioStreamPlayer/Options/Label/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="AudioStreamPlayer/Options/AudioControl" to="AudioStreamPlayer/Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="AudioStreamPlayer/Options/FullScreenControl" to="AudioStreamPlayer/Options/FullScreenControl" method="_on_toggled"]
